# MMDisCo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
checkpoints/: .gitignore
conf/: base.yaml  generate.yaml  generate_mmdiffusion.yaml
conf/hydra/: default.yaml
conf/hydra/job_logging/: custom.yaml
conf/inference/: default.yaml  mmdiff.yaml
conf/model/: audioldm_animediff_vggsound.yaml  auffusion_videocrafter2_vggsound.yaml  mmdiffusion_aist++.yaml  mmdiffusion_landscape.yaml
conf/model/mm_diffusion/: base.yaml  sr.yaml
conf/paths/: default.yaml
mmdisco/models/: __init__.py  base.py  networks.py
mmdisco/models/diffusion/: __init__.py  audio.py  base.py  guidance.py  mel_extractor.py  multimodal.py  video.py
mmdisco/models/diffusion/auffusion/: auffusion_pipeline.py  converter.py
mmdisco/models/diffusion/mmdiffusion/: __init__.py  common.py  fp16_util.py  gaussian_diffusion.py  image_unet.py  multimodal_dpm_solver_plus.py  multimodal_gaussian_diffusion.py  multimodal_respace.py  multimodal_script_util.py  multimodal_unet.py  nn.py  respace.py  script_util.py
mmdisco/models/diffusion/videocrafter/: basics.py  common.py  utils.py
mmdisco/models/diffusion/videocrafter/models/: autoencoder.py  ddpm3d.py  utils_diffusion.py
mmdisco/models/residual_predictor/: __init__.py  base.py  mm_block.py  nn.py  timestep.py  vit.py  x_formers.py
mmdisco/models/scheduler/: scheduling_ddpm_extcuda.py
mmdisco/utils/: logger.py  misc.py  save.py
scripts/: generate.py  generate_mmdiffusion.py
(+7 files in other folders)
